création d'un new js & d'un exemple

--- a/DEVINE_NMBR/index.html
+++ b/DEVINE_NMBR/index.html
@@ -8,20 +8,26 @@
 </head>
 <body>
     <header>
+        <nav></nav>
     </header>
     <main>
+        <div class="h1">
+            <H1>Devine le nombre</H1>
+        </div>
         <div class="container">
             <div class="content">
-                <h2></h2>
+                <h2>Voici les instructions</h2>
+                <p>instruction</p>
+                <button class="b-game">
+                </button>
+
 
             </div>
         </div>
-        <script src="js/nombre-mystere.js"></script>
     </main>
     <footer>
 
     </footer>
-
-
+<script src="js/nombre-mystere.js"></script>
 </body>
 </html>
