debut du projet

--- a/DEVINE_NMBR/index.html
+++ b/DEVINE_NMBR/index.html
@@ -17,9 +17,20 @@
         <div class="container">
             <div class="content">
                 <h2>Voici les instructions</h2>
-                <p>instruction</p>
-                <button class="b-game">
-                </button>
+                <p>Instruction</p>
+
+                <p>lance le jeu en cliquant</p>
+                <form action="">
+                    <label for="devine ton nombre"></label>
+                    <button id="b-game">
+                        Lance le jeu
+                    </button>
+
+                    <input type="text" placeholder="Saisie un nombre entre 1 et 100">
+
+                    <butto id="b-game-valid"n>Verification</butto>
+
+                </form>
 
 
             </div>
