Correction js - button

--- a/DEVINE_NMBR/index.html
+++ b/DEVINE_NMBR/index.html
@@ -34,18 +34,15 @@
 
 
                     <p>Pour jouer il faut écrire un nombre entre <strong>1</strong> et <strong>100</strong></p>
-                    <form action="game">
+                    <div>
                         <label for="user-input"></label>
                         <input type="text" id="user-input" placeholder="Saisie un nombre entre 1 et 100">
-
-                        <a href="index.html" class="rejouer">rejouer</a>
-
-
+                        <button id="jouer">jouer</button>
                         <div class="resultat">
                             <p class="text-resultat"></p>
                         </div>
 
-                    </form>
+                    </div>
 
 
                 </div>
